# PyModules

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.fastapi  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: __init__.py  api_example.py  calculator_module.py  db_example.py  demo.py  fastapi_app.py  full_stack_example.py  greet_module.py  logging_module.py
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
pymodules/: __init__.py  _imports.py  config.py  exceptions.py  health.py  host.py  interfaces.py  logging.py  module.py  protocols.py  resilience.py  tracing.py
pymodules/api/: __init__.py  conventions.py  decorators.py  discovery.py  errors.py  router.py
pymodules/api/auth/: __init__.py  base.py  jwt.py  middleware.py
pymodules/db/: __init__.py  base.py  manager.py  mixins.py  repository.py  settings.py
pymodules/discovery/: __init__.py  consul.py  dns.py  registry.py
pymodules/fastapi/: __init__.py  integration.py
pymodules/messaging/: __init__.py  broker.py  consumer.py  persistent_dlq.py  protocols.py  redis_broker.py
tests/: __init__.py  test_async_handlers.py  test_config.py  test_core.py  test_discovery.py  test_error_handling.py  test_exports.py  test_fastapi_integration.py  test_health.py  test_import_errors.py  test_logging.py  test_messaging.py  test_protocols.py  test_resilience.py  test_stress.py  test_tracing.py
tests/api/: conftest.py  test_conventions.py  test_decorators.py  test_discovery.py  test_errors.py  test_router.py
tests/api/auth/: __init__.py  test_base.py  test_jwt.py  test_middleware.py
tests/db/: conftest.py  test_base.py  test_manager.py  test_mixins.py  test_repository.py  test_settings.py
tests/integration/: test_full_stack.py
