[project]
name = "pymodules"
version = "0.3.0"
description = "An event-driven modular architecture for Python, inspired by NetModules"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PyModules Contributors" }]
keywords = ["events", "modules", "plugin", "architecture", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: FastAPI",
]
dependencies = []

[project.optional-dependencies]
# Web framework integration (legacy)
fastapi = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0"]

# Database layer
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.0", "pydantic-settings>=2.0.0"]
postgres = ["pymodules[sqlalchemy]", "asyncpg>=0.28.0"]
sqlite = ["pymodules[sqlalchemy]", "aiosqlite>=0.19.0"]

# API layer (new)
api = ["pymodules[fastapi]", "pydantic-settings>=2.0.0"]
api-db = ["pymodules[api,sqlalchemy]"]

# Auth providers
jwt = ["python-jose[cryptography]>=3.3.0"]

# Message broker - Redis Streams
redis = ["redis>=5.0.0"]

# Service discovery - Consul
consul = ["python-consul>=1.1.0"]

# DNS resolution (included in stdlib, but explicit for type checking)
dns = []

# Convenience groups
messaging = ["pymodules[redis]"]
discovery = ["pymodules[consul]"]
web = ["pymodules[api-db,jwt]"]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "httpx>=0.24.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    # NEW for db tests
    "aiosqlite>=0.19.0",
    # NEW for api tests
    "pytest-mock>=3.12.0",
]

# Full installation with all optional features
full = ["pymodules[web,redis,consul,dev]"]

# Backward compatibility
all = ["pymodules[full]"]

[project.urls]
Homepage = "https://github.com/pymodules/pymodules"
Documentation = "https://github.com/pymodules/pymodules#readme"
Repository = "https://github.com/pymodules/pymodules"
Issues = "https://github.com/pymodules/pymodules/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pymodules"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
timeout = 30

[tool.coverage.run]
source = ["pymodules"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["fastapi.*", "uvicorn.*", "pydantic.*", "pydantic_settings.*", "redis.*", "consul.*", "sqlalchemy.*", "jose.*", "starlette.*", "aiosqlite.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B027",   # empty method in abstract class (intentional for optional lifecycle hooks)
    "SIM102", # nested if statements (sometimes clearer)
    "SIM103", # return condition directly (sometimes clearer with explicit branches)
    "SIM105", # contextlib.suppress vs try-except-pass (preference)
    "SIM108", # ternary operator (sometimes if-else is clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "ARG005", "E731", "SIM105", "SIM117", "UP038", "B011"]  # Allow unused args, lambdas, and test patterns
"pymodules/*/__init__.py" = ["F401"]  # Allow "unused" imports in lazy loading __getattr__ patterns
"pymodules/db/mixins.py" = ["ARG002"]  # SQLAlchemy TypeDecorator requires dialect param
"pymodules/discovery/dns.py" = ["ARG002"]  # Interface methods require params for API compatibility

[tool.ruff.lint.isort]
known-first-party = ["pymodules"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
